# GitNews

./: .gitattributes  .gitignore  .metadata  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RUN.md  STYLE.md  analysis_options.yaml  design-qa.md  env.example.json  pubspec.yaml  setup_android_env.bat
.agent/: PLANS.md
.github/workflows/: ci.yml  harness.yml  quality.yml
.workbuddy/memory/: 2026-07-08.md  MEMORY.md
android/app/: build.gradle.kts
assets/fonts/: README.md
docs/: README.md  ai_digest_model_providers.md  product_ia_data_plan.md  screenshots.md
docs/aihot-api/: 01_items_mode-selected.json  02_items_mode-all.json  03_daily.json  04_dailies.json  06_version.json
lib/: app.dart  bootstrap.dart  main.dart
server/: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
server/app/: __init__.py  auth.py  collaboration_service.py  config.py  db.py  deps.py  feeds.py  gharchive_service.py  main.py  models.py  push_service.py  runtime.py  sync_service.py
server/app/routers/: collaboration.py  gharchive.py  news.py  push.py  sync.py
server/tests/: conftest.py  test_api.py  test_config.py  test_feeds.py  test_gharchive.py
server/tools/: feed_live_smoke.py  live_smoke.py
test/: bootstrap_test.dart  widget_test.dart
tool/: add_trailing_commas_to_multiline.py  strip_trailing_commas.py
tools/: check_changed_dart_format.ps1  check_markdown_links.ps1  generate_app_icon.py  harness.json  harness.ps1  setup_android_env.ps1  windows_release_smoke.ps1  windows_tray_smoke.ps1
windows/: CMakeLists.txt
(+557 files in other folders)
